--- a/index.html
+++ b/index.html
@@ -4,9 +4,114 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"  href="./style.css">
     <title>Document</title>
 </head>
 <body>
-    StackO Game
+    
+
+   
+    <div class="main"> 
+        <div class="div1"> 
+            <h1>StackO Game</h1>
+        </div>
+        <div class="div1">
+            <h1 id="counter"></h1>
+            <h1 id="score"></h1>
+            <h1 id="tiles"></h1>
+        </div>
+        <div class="div2">
+        
+                <button onclick="press(1 ,' A')" >
+                    <div class="alpha" >A</div>
+                    <div class="num">1</div>
+                </button>
+                <button onclick="press( 1 , ' E')">
+                    <div class="alpha">E</div>
+                    <div  class="num">1</div>
+                </button>
+                <button onclick="press(1, 'I')">
+                    <div class="alpha">I</div>
+                    <div  class="num">1</div>
+                </button>
+                <button onclick="press(1 , 'O')">
+                    <div class="alpha">O</div>
+                    <div  class="num">1</div>
+                </button>
+                <button onclick="press(1, 'U')">
+                    <div class="alpha">U</div>
+                    <div  class="num">1</div>
+                </button>
+                <button onclick="press(3, 'B')">
+                    <div  class="sp"><DL></DL></div>
+                    <div class="alpha">B</div>
+                    <div class="num">3</div>
+                </button>
+                <button onclick="press(3, 'C')">
+                    <div class="alpha">C</div>
+                    <div  class="num">3</div>
+                </button>
+                <button onclick="press(4, 'F')">
+                    <div  class="sp">DW</div>
+                    <div class="alpha">F</div>
+                    <div  class="num">4</div>
+                </button>
+                <button onclick="press(2, 'G')">
+                    <div  class="sp">TL</div>
+                    <div class="alpha" >G</div>
+                    <div  class="num">2</div>
+                </button>
+                <button onclick="press(4, 'H')">
+                    <div class="alpha">H</div>
+                    <div  class="num">4</div>
+                </button>
+                <button onclick="press(1, 'L')">
+                    <div class="alpha">L</div>
+                    <div class="num">1</div>
+                </button>
+                <button onclick="press(3, 'M')">
+                    <div class="alpha">M</div>
+                    <div  class="num">3</div>
+                </button>
+                <button onclick="press(2, 'N')">
+                    <div class="alpha">N</div>
+                    <div  class="num">2</div>
+                </button>
+                <button onclick="press(1, 'P')">
+                    <div class="alpha">P</div>
+                    <div  class="num">1</div>
+                </button>
+                <button onclick="press(1, 'R')">
+                    <div class="alpha">R</div>
+                    <div  class="num">1</div>
+                </button>
+                <button onclick="press(4, 'T')">
+                    <div class="alpha">T</div>
+                    <div  class="num">4</div>
+                </button>
+                <button onclick="press(4, 'W')">
+                    <div class="alpha">W</div>
+                    <div  class="num">4</div>
+                </button>
+                <button onclick="press(4, 'Y')">
+                    <div class="alpha">Y</div>
+                    <div  class="num">4</div>
+                </button>     
+        </div>
+
+
+        <div class="displaydata"></div>
+
+        <div class="div3">
+            <button onclick="Start()">Start</button>
+            <button onclick="Remove()" id="remove">Remove</button>
+            <button onclick="deleteAll()"id="clear">delete</button>
+        </div>
+        <div class="div3">
+            <h3> Tap on the word to remove the last letter..</h3>
+        </div>
+    </div>
+
 </body>
 </html>
+<script src="./index.js"></script>
