--- a/index.html
+++ b/index.html
@@ -42,3 +42,8 @@
 </body>
 </html>
 <script src="./script/index.js"></script>
+<script src="./script/counter.js"></script>
+<script src="./script/Delete.js"></script>
+<script src="./script/submit.js"></script>
+<script src="./script/remove.js"></script>
+<script src="./script/quit.js"></script>
